<!--
  ~ /*
  ~  * Copyright 2020,
  ~  *                 ☕ Marco Finadri - theandroidcoffee.com ☕
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *  http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<resources>
	<string name="app_name">BottomNavigation_MultiStack</string>

	<string name="add_1">+1</string>
	<string name="add_2">+2</string>
	<string name="add_3">+3</string>
	<string name="add_4">+4</string>
	<string name="add_5">+5</string>
	<string name="add_6">+6</string>
	<string name="add_7">+7</string>
	<string name="add_8">+8</string>
	<string name="add_9">+9</string>
	<string name="add_10">+10</string>
	<string name="sub_1">-1</string>
	<string name="sub_2">-2</string>
	<string name="sub_3">-3</string>
	<string name="sub_4">-4</string>
	<string name="sub_5">-5</string>
	<string name="sub_6">-6</string>
	<string name="sub_7">-7</string>
	<string name="sub_8">-8</string>
	<string name="sub_9">-9</string>
	<string name="sub_10">-10</string>
	<string name="browser">Browser</string>
	<string name="adder">Adder</string>
	<string name="contacts">Contacts</string>
	<string name="open_browser">Open Browser</string>
	<string name="contact_list">Contact List</string>
	<string name="contact">Contact</string>
	<string name="app_description">This demo app shows how to store MULTIPLE STACKS using the BottomNavigationView to retain the last opened Fragment</string>
	<string name="user_profile_image">User profile image</string>
</resources>